@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.5.2) unstable; urgency=low
 
   * added filter cache
   * header-parser: added missing range check in header_parse_line()
+  * fork: added event for writing to the child process
 
  --
 
